--- a/package.json
+++ b/package.json
@@ -27,16 +27,21 @@
   },
   "peerDependencies": {
     "react": ">=18.1.0",
-    "typescript": "^4.7.2",
-    "react-dom": ">=18.1.0"
+    "react-dom": ">=18.1.0",
+    "typescript": "^4.7.2"
   },
   "devDependencies": {
-    "classnames": "^2.3.1",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "classnames": "^2.3.1",
     "react": "^18.1.0",
-    "typescript": "^4.7.2",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2"
   }
 }
