--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "build": "webpack --config ./config/webpack.config.js",
     "build:prod": "tsc --build --watch tsconfig.prod.json"
   },
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
@@ -38,9 +39,16 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "classnames": "^2.3.1",
+    "css-loader": "^6.7.1",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "typescript": "^4.7.2"
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
