--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noEmit": false,
+    "outDir": "dist",
+    "declaration": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "dist/*"
+      ]
+    }
   },
   // "files": [
   //   "dist"
