--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "webpack --config ./config/webpack.config.js",
-    "build:prod": "tsc --build --watch tsconfig.prod.json"
+    "build:prod": "webpack --config ./config/webpack.prod.js --stats-modules-space 999",
+    "build:tsc": "tsc --build --watch tsconfig.prod.json"
   },
   "main": "dist/main.js",
   "types": "dist/index.d.ts",
@@ -32,7 +32,10 @@
   "peerDependencies": {
     "react": ">=18.1.0",
     "react-dom": ">=18.1.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
@@ -48,11 +51,11 @@
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
-  },
-  "dependencies": {
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2"
-  }
+  },
+  "dependencies": {}
 }
