--- a/package.json
+++ b/package.json
@@ -9,35 +9,20 @@
   "main": "dist/main.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/**"
   ],
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "peerDependencies": {
-    "react": ">=18.1.0",
-    "react-dom": ">=18.1.0",
-    "typescript": "^4.7.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.2"
+    "@mui/icons-material": "^5.8.2",
+    "react": ">=18.1.0",
+    "react-dom": ">=18.1.0",
+    "typescript": "^4.7.2"
   },
   "devDependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
@@ -52,10 +37,6 @@
     "typescript": "^4.7.2",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-node-externals": "^3.0.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.2"
-  },
-  "dependencies": {}
+    "webpack-node-externals": "^3.0.0"
+  }
 }
