--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.8.2",
     "react": ">=18.1.0",
     "react-dom": ">=18.1.0",
+    "classnames": "^2.3.1",
     "typescript": "^4.7.2"
   },
   "devDependencies": {
