fix package json

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "webpack --config ./config/webpack.prod.js",
     "pub": "npm run build && npm publish"
   },
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**"
