--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pub": "npm run build && npm publish"
   },
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**"
@@ -48,10 +49,12 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "classnames": "^2.3.1",
+    "cpx": "^1.5.0",
     "css-loader": "^6.7.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "rimraf": "^3.0.2",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
