--- a/package.json
+++ b/package.json
@@ -32,35 +32,19 @@
     "dist/**"
   ],
   "peerDependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
     "@grossb/react-table": "^0.0.3",
-    "@mui/icons-material": "^5.8.2",
-    "classnames": "^2.3.1",
     "react": ">=18.1.0",
     "react-dom": ">=18.1.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "sass": "latest"
   },
   "devDependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.2",
-    "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "classnames": "^2.3.1",
     "cpx": "^1.5.0",
-    "css-loader": "^6.7.1",
-    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^4.7.2"
   }
 }
