--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grossb/react-data-table",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "React data table component",
   "keywords": [
     "react",
@@ -20,41 +20,31 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config ./config/webpack.prod.js",
+    "clean": "rimraf dist",
+    "copy:styles": "cpx src/style/** dist/style",
+    "build": "npm run clean && tsc -p tsconfig.prod.json && npm run copy:styles",
     "pub": "npm run build && npm publish"
   },
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**"
   ],
   "peerDependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.2",
+    "@grossb/react-table": "^0.0.3",
     "react": ">=18.1.0",
     "react-dom": ">=18.1.0",
-    "classnames": "^2.3.1",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "sass": "latest"
   },
   "devDependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.2",
-    "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "classnames": "^2.3.1",
-    "css-loader": "^6.7.1",
-    "node-sass": "^7.0.1",
+    "cpx": "^1.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-node-externals": "^3.0.0"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.7.2"
   }
 }
