--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grossb/react-data-table",
-  "version": "0.1.0",
+  "version": "0.0.7",
   "description": "React data table component",
   "keywords": [
     "react",
@@ -21,8 +21,10 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist",
-    "copy:styles": "cpx src/style/** dist/style",
-    "build": "npm run clean && tsc -p tsconfig.prod.json && npm run copy:styles",
+    "copy:styles": "cpx src/styles/** dist/styles && cpx src/Components/styles/** dist/Components/styles",
+    "prebuild": "npm run clean",
+    "build": "tsc -p tsconfig.prod.json",
+    "postbuild": "npm run copy:styles",
     "pub": "npm run build && npm publish"
   },
   "main": "dist/index.js",
@@ -32,13 +34,22 @@
     "dist/**"
   ],
   "peerDependencies": {
-    "@grossb/react-table": "^0.0.3",
-    "react": ">=18.1.0",
-    "react-dom": ">=18.1.0",
-    "typescript": "^4.7.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/lab": "^5.0.0-alpha.75",
+    "@mui/icons-material": "^5.8.2",
+    "@grossb/react-table": "^0.1.2",
+    "classnames": "^2.3.1",
+    "react": ">=17.0.1",
+    "react-dom": ">=17.0.1",
     "sass": "latest"
   },
   "devDependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@grossb/react-table": "^0.1.2",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "cpx": "^1.5.0",
