--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grossb/react-data-table",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "React data table component",
   "keywords": [
     "react",
@@ -36,9 +36,10 @@
   "peerDependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^5.0.0-alpha.75",
-    "@mui/icons-material": "^5.8.2",
     "@grossb/react-table": "^0.1.2",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.7",
+    "@mui/lab": "^5.0.0-alpha.75",
     "classnames": "^2.3.1",
     "react": ">=17.0.1",
     "react-dom": ">=17.0.1",
@@ -50,6 +51,7 @@
     "@grossb/react-table": "^0.1.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.75",
+    "@mui/material": "^5.8.7",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "cpx": "^1.5.0",
